Fixes the config folder to include names of given jobs and preferences.

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 #ignore any files in config/, except those in subdirectories.
 /config/*
 !/config/*/*
-!/config/example
+!/config/*
 
 #ignore other, specific files and folers
 data/
