Definitely NOT an atomic commit, but this is coming from the VPS.
Updates gitignore to ignore playervoices. Common sense and I had to in order to viably push from VPS.
Changes our hub appearance slightly, got rid of that copied paracode message.
Fixed my lazy work of a month or so ago, deleted old non_voice files and renamed the voice files to the original.
Added a .txt for voice documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 !/config/example
 !/config/names
 
+#ignore files involving playervoices
+/sound/playervoices/*
+
 #ignore other, specific files and folers
 data/
 /_maps/map_files/backup/*
